<resources>
    <string name="app_name">Tayga</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- navigation drawer menu item-->
    <string name="menu_main">종합 게임정보</string>
    <string name="menu_popular">Top 20위 실시간 인기 Stream</string>
    <string name="menu_game">Top 20 인기 Game</string>
    <string name="menu_favorites">즐겨찾기</string>
    <string name="menu_profile">계정</string>
    <string name="menu_remove_favorites">즐겨찾기 제거</string>
    <string name="menu_profile_detail">계정 정보 보기</string>

    <!--Firebase-->
    <string name="auth_failed">회원 가입에 실패했습니다.</string>


    <string name="facebook_app_id">1839161863080429</string>
    <string name="fb_login_protocol_scheme">fb1839161863080429</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
